Update http to https

--- a/publications.html
+++ b/publications.html
@@ -1,5 +1,5 @@
-<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
-<html xmlns="http://www.w3.org/1999/xhtml" xml:lang="en" lang="en">
+<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "https://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
+<html xmlns="https://www.w3.org/1999/xhtml" xml:lang="en" lang="en">
 <head>
 <meta http-equiv="Content-Style-Type" content="text/css" />
 <meta name="keywords" content="Athena++,Astrophysics,MHD,Radiation,Simulation">
@@ -41,7 +41,7 @@
   <!-- https://iopscience.iop.org/article/10.3847/1538-4365/ab929b   -->
   <li><a href="https://ui.adsabs.harvard.edu/abs/2018JCoPh.375.1365F">A fourth-order accurate finite volume method for ideal MHD via upwind constrained transport</a>, Felker, K. G., &amp; Stone, J. M. 2018, Journal of Computational Physics, 375, 1365-1400</li>
   <!-- https://www.sciencedirect.com/science/article/pii/S0021999118305485 -->
-  <li><a href="http://adsabs.harvard.edu/abs/2016ApJS..225...22W">An Extension of the Athena++ Code Framework for GRMHD Based on Advanced Riemann Solvers and Staggered-mesh Constrained Transport</a>, White, C. J., Stone, J. M., &amp; Gammie, C. F. 2016, The Astrophysical Journal Supplement, 225(2), 22 pages</li>
+  <li><a href="https://adsabs.harvard.edu/abs/2016ApJS..225...22W">An Extension of the Athena++ Code Framework for GRMHD Based on Advanced Riemann Solvers and Staggered-mesh Constrained Transport</a>, White, C. J., Stone, J. M., &amp; Gammie, C. F. 2016, The Astrophysical Journal Supplement, 225(2), 22 pages</li>
   <!-- https://iopscience.iop.org/article/10.3847/0067-0049/225/2/22 -->
 </ol>
 <!-- <h2>Unpublished, preprints, technical reports</h2> -->
