--- a/download.html
+++ b/download.html
@@ -37,7 +37,7 @@
 <p>This program is free software; you can redistribute it and/or modify it under the terms of The BSD 3-Clause License.
 </p>
 <p>
-<strong>UPDATE</strong> (8/6/2019): Version 19.0 has been released! View the <a href="https://github.com/PrincetonUniversity/athena-public-version/releases/tag/v19.0">GitHub Release Notes</a> for more details on what has changed. We have switched from Semantic Versioning (SemVer, v1.1.1) to Calender Versioning (CalVer, v19.0).
+<strong>UPDATE</strong> (2021-01-06): Version 21.0 has been released! View the <a href="https://github.com/PrincetonUniversity/athena-public-version/releases/tag/v19.0">GitHub Release Notes</a> for more details on what has changed. 
 </p>
 
 <h2>GitHub Repository</h2>
