--- a/index.html
+++ b/index.html
@@ -40,9 +40,9 @@
 </p>
 <div class="logo"><img alt="Athena++ temporary logo" src="images/athena_logo_temporary.png" width="400" class="logo"></div>
 <h2>Core Developers</h2>
-<p><strong>James M. Stone</strong><br />Professor<br />Department of Astrophysical Sciences<br />Princeton University</p>
-<p><strong>Kengo Tomida</strong><br />Assistant Professor<br />Department of Earth and Space Science<br />Osaka University</p>
-<p><strong>Christopher White</strong><br />Department of Astronomy<br />University of California, Berkeley</p>
+<p><strong>James M. Stone</strong><br />Professor<br />School of Natural Sciences<br /Institute for Advanced Study</p>
+<p><strong>Kengo Tomida</strong><br />Associate Professor<br />Astronomical Institute<br />Tohoku University</p>
+<p><strong>Christopher White</strong><br />Department of Astrophysical Sciences<br />Princeton University</p>
   <p><strong>Kyle Gerard Felker</strong><br />Postdoctoral Appointee<br />Leadership Computing Facility<br />Argonne National Laboratory</p>
   <!-- Program in Applied and Computational Mathematics<br />Princeton University</p> -->
 
