--- a/index.html
+++ b/index.html
@@ -42,8 +42,8 @@
 <h2>Core Developers</h2>
 <p><strong>James M. Stone</strong><br />Professor<br />School of Natural Sciences<br /Institute for Advanced Study</p>
 <p><strong>Kengo Tomida</strong><br />Associate Professor<br />Astronomical Institute<br />Tohoku University</p>
-<p><strong>Christopher White</strong><br />Department of Astrophysical Sciences<br />Princeton University</p>
-  <p><strong>Kyle Gerard Felker</strong><br />Postdoctoral Appointee<br />Leadership Computing Facility<br />Argonne National Laboratory</p>
+<p><strong>Christopher White</strong><br />Joint Princeton/Flatiron Postdoctoral Fellow<br />Department of Astrophysical Sciences<br />Princeton University</p>
+<p><strong>Kyle Gerard Felker</strong><br />Postdoctoral Appointee<br />Leadership Computing Facility<br />Argonne National Laboratory</p>
   <!-- Program in Applied and Computational Mathematics<br />Princeton University</p> -->
 
 <iframe width="820" height="461" src="https://www.youtube.com/embed/g9TpvLFvNaQ?rel=0&amp;showinfo=0" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe>
