Update links on gh-pages away from now-archived athena-public-version

--- a/download.html
+++ b/download.html
@@ -27,7 +27,7 @@
 <ul class="menu">
 <li class="menu"><a class="menu" href="index.html">Home</a></li>
 <li class="menu"><a class="menu" href="download.html">Download</a></li>
-<li class="menu"><a class="menu" href="https://github.com/PrincetonUniversity/athena-public-version/wiki">Documentation</a></li>
+<li class="menu"><a class="menu" href="https://github.com/PrincetonUniversity/athena/wiki">Documentation</a></li>
 <li class="menu"><a class="menu" href="publications.html">Publications</a></li>
 </ul>
 </div>
@@ -37,25 +37,25 @@
 <p>This program is free software; you can redistribute it and/or modify it under the terms of The BSD 3-Clause License.
 </p>
 <p>
-<strong>UPDATE</strong> (2021-01-06): Version 21.0 has been released! View the <a href="https://github.com/PrincetonUniversity/athena-public-version/releases/tag/v21.0">GitHub Release Notes</a> for more details on what has changed. 
+<strong>UPDATE</strong> (2021-01-06): Version 21.0 has been released! View the <a href="https://github.com/PrincetonUniversity/athena/releases/tag/v21.0">GitHub Release Notes</a> for more details on what has changed. 
 </p>
 
 <h2>GitHub Repository</h2>
 <p>
-The latest public version is <strong>21.0</strong> and is distribuited on <a href="https://github.com/PrincetonUniversity/athena-public-version">the GitHub repository</a>. You can download the code from the repository using any Git client.</p>
+The latest release is <strong>21.0</strong> and is distribuited on <a href="https://github.com/PrincetonUniversity/athena">the GitHub repository</a>. You can download the code from the repository using any Git client.</p>
 </p>
 To download the code using the standard git, type:</p>
-<pre><code>&gt; git clone https://github.com/PrincetonUniversity/athena-public-version
+<pre><code>&gt; git clone https://github.com/PrincetonUniversity/athena
 </code></pre>
 <p>And to retrieve the latest update, move into the code directory and type:</p>
 <pre><code>&gt; git pull
 </code></pre>
 <p>For more information, please consult the documentation of the Git client you use.</p>
 <p>
-Please see <a href="https://github.com/PrincetonUniversity/athena-public-version/wiki">the documentation on the GitHub Wiki</a> for instructions and tutorial.
+Please see <a href="https://github.com/PrincetonUniversity/athena/wiki">the documentation on the GitHub Wiki</a> for instructions and tutorial.
 </p>
 <p>
-The public version will receive frequent updates and improvements from the private development repository. There can still be bugs and issues. It is users' responsibility to guarantee quality and correctness of the results. Any feedbacks and contributions are welcome, but please understand that we may not be able to respond to all of them because of limited resources.
+The periodic releases will contain receive feature updates, algorithmic changes, and performance improvements. There can still be bugs and issues. It is users' responsibility to guarantee quality and correctness of the results. Any feedbacks and contributions are welcome, but please understand that we may not be able to respond to all of them because of limited resources.
 </p>
 <hr />
 </div>
