--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
 <ul class="menu">
 <li class="menu"><a class="menu" href="index.html">Home</a></li>
 <li class="menu"><a class="menu" href="download.html">Download</a></li>
-<li class="menu"><a class="menu" href="https://github.com/PrincetonUniversity/athena-public-version/wiki">Documentation</a></li>
+<li class="menu"><a class="menu" href="https://github.com/PrincetonUniversity/athena/wiki">Documentation</a></li>
 <li class="menu"><a class="menu" href="publications.html">Publications</a></li>
 </ul>
 </div>
@@ -36,7 +36,7 @@
 <h1>Athena++ radiation GRMHD code</h1>
 
 <h2>About</h2>
-<p>Athena++ is a complete re-write of the <a href="https://trac.princeton.edu/Athena/">Athena</a> astrophysical magnetohydrodynamics (MHD) code in C++. Compared to earlier versions, the Athena++ code has (1) much more flexible coordinate and grid options including adaptive mesh refinement (AMR), (2) new physics including general relativity, (3) significantly improved performance and scalability, and (4) improved source code clarity and modularity.
+<p><a href="https://github.com/PrincetonUniversity/athena">Athena++</a> is a complete re-write of the <a href="https://trac.princeton.edu/Athena/">Athena</a> astrophysical magnetohydrodynamics (MHD) code in C++. Compared to earlier versions, the Athena++ code has (1) much more flexible coordinate and grid options including adaptive mesh refinement (AMR), (2) new physics including general relativity, (3) significantly improved performance and scalability, and (4) improved source code clarity and modularity.
 </p>
 <div class="logo"><img alt="Athena++ temporary logo" src="images/athena_logo_temporary.png" width="400" class="logo"></div>
 <h2>Core Developers</h2>
@@ -44,7 +44,6 @@
 <p><strong>Kengo Tomida</strong><br />Associate Professor<br />Astronomical Institute<br />Tohoku University</p>
 <p><strong>Christopher White</strong><br />Joint Princeton/Flatiron Postdoctoral Fellow<br />Department of Astrophysical Sciences<br />Princeton University</p>
 <p><strong>Kyle Gerard Felker</strong><br />Postdoctoral Appointee<br />Leadership Computing Facility<br />Argonne National Laboratory</p>
-  <!-- Program in Applied and Computational Mathematics<br />Princeton University</p> -->
 
 <iframe width="820" height="461" src="https://www.youtube.com/embed/g9TpvLFvNaQ?rel=0&amp;showinfo=0" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe>
 <hr />
