--- a/download.html
+++ b/download.html
@@ -37,12 +37,14 @@
 <p>This program is free software; you can redistribute it and/or modify it under the terms of The BSD 3-Clause License.
 </p>
 <p>
-<strong>UPDATE</strong> (2021-01-06): Version 21.0 has been released! View the <a href="https://github.com/PrincetonUniversity/athena/releases/tag/v21.0">GitHub Release Notes</a> for more details on what has changed. 
+<strong>UPDATE</strong> (2021-05-10): The development repo is now public!  The latest release Version 21.0 is available directly from the <a href="https://github.com/PrincetonUniversity/athena">the GitHub repository</a>.
 </p>
 
 <h2>GitHub Repository</h2>
 <p>
-The latest release is <strong>21.0</strong> and is distribuited on <a href="https://github.com/PrincetonUniversity/athena">the GitHub repository</a>. You can download the code from the repository using any Git client.</p>
+The latest release is <strong>21.0</strong> and is distribuited on <a href="https://github.com/PrincetonUniversity/athena">the GitHub repository</a>. You can download the code from the repository using any Git client.
+  See the <a href="https://github.com/PrincetonUniversity/athena/releases/tag/v21.0">GitHub Release Notes</a> for more details on what has changed. 
+</p>
 </p>
 To download the code using the standard git, type:</p>
 <pre><code>&gt; git clone https://github.com/PrincetonUniversity/athena
