--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
 </p>
 <div class="logo"><img alt="Athena++ temporary logo" src="images/athena_logo_temporary.png" width="400" class="logo"></div>
 <h2>Core Developers</h2>
-<p><strong>James M. Stone</strong><br />Professor<br />School of Natural Sciences<br /Institute for Advanced Study</p>
+<p><strong>James M. Stone</strong><br />Professor<br />School of Natural Sciences<br />Institute for Advanced Study</p>
 <p><strong>Kengo Tomida</strong><br />Associate Professor<br />Astronomical Institute<br />Tohoku University</p>
 <p><strong>Christopher White</strong><br />Joint Princeton/Flatiron Postdoctoral Fellow<br />Department of Astrophysical Sciences<br />Princeton University</p>
 <p><strong>Kyle Gerard Felker</strong><br />Postdoctoral Appointee<br />Leadership Computing Facility<br />Argonne National Laboratory</p>
