--- a/index.html
+++ b/index.html
@@ -43,7 +43,8 @@
 <p><strong>James M. Stone</strong><br />Professor<br />School of Natural Sciences<br />Institute for Advanced Study</p>
 <p><strong>Kengo Tomida</strong><br />Associate Professor<br />Astronomical Institute<br />Tohoku University</p>
 <p><strong>Christopher White</strong><br />Joint Princeton/Flatiron Postdoctoral Fellow<br />Department of Astrophysical Sciences<br />Princeton University</p>
-<p><strong>Kyle Gerard Felker</strong><br />Postdoctoral Appointee<br />Leadership Computing Facility<br />Argonne National Laboratory</p>
+<p><strong>Kyle Gerard Felker</strong><br />Assistant Computational
+  Scientist<br />Computational Sciences Division<br />Argonne National Laboratory</p>
 
 <iframe width="820" height="461" src="https://www.youtube.com/embed/g9TpvLFvNaQ?rel=0&amp;showinfo=0" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe>
 <hr />
