Update papers; add details about issues, PRs, discussions

--- a/download.html
+++ b/download.html
@@ -43,10 +43,10 @@
 <h2>GitHub Repository</h2>
 <p>
 The latest release is <strong>21.0</strong> and is distribuited on <a href="https://github.com/PrincetonUniversity/athena">the GitHub repository</a>. You can download the code from the repository using any Git client.
-  See the <a href="https://github.com/PrincetonUniversity/athena/releases/tag/v21.0">GitHub Release Notes</a> for more details on what has changed. 
+  See the <a href="https://github.com/PrincetonUniversity/athena/releases">GitHub Release Notes</a> for more details on what has changed. 
 </p>
 </p>
-To download the code using the standard git, type:</p>
+To download the code using the standard command line Git, type:</p>
 <pre><code>&gt; git clone https://github.com/PrincetonUniversity/athena
 </code></pre>
 <p>And to retrieve the latest update, move into the code directory and type:</p>
@@ -56,6 +56,24 @@ To download the code using the standard git, type:</p>
 <p>
 Please see <a href="https://github.com/PrincetonUniversity/athena/wiki">the documentation on the GitHub Wiki</a> for instructions and tutorial.
 </p>
+<p>
+  For a user community-led discussion about the code, a forum for asking for help, and a
+  place to showcase your Athena++ extensions, projects, plotting or utility scripts, and ideas, see
+  <a href="https://github.com/PrincetonUniversity/athena/discussions">GitHub Discussions</a>.
+</p>
+
+<p>
+For reporting potential performance or correctness bugs in the code and
+algorithm, please open a
+detailed <a href="https://github.com/PrincetonUniversity/athena/issues">GitHub Issue</a>. 
+</p>
+
+<p>
+  High quality <a href="https://github.com/PrincetonUniversity/athena/pulls">pull
+    requests</a> for bugfixes or new features are accepted on a case-by-case basis. Please
+    contact the relevant code maintainer before expending too much effort on a lengthy PR.
+</p>
+
 <p>
 The periodic releases will contain receive feature updates, algorithmic changes, and performance improvements. There can still be bugs and issues. It is users' responsibility to guarantee quality and correctness of the results. Any feedbacks and contributions are welcome, but please understand that we may not be able to respond to all of them because of limited resources.
 </p>
