--- a/index.html
+++ b/index.html
@@ -28,6 +28,7 @@
 <li class="menu"><a class="menu" href="index.html">Home</a></li>
 <li class="menu"><a class="menu" href="download.html">Download</a></li>
 <li class="menu"><a class="menu" href="https://github.com/PrincetonUniversity/athena/wiki">Documentation</a></li>
+<li class="menu"><a class="menu" href="https://github.com/PrincetonUniversity/athena/discussions">AthenaHub Discussions</a></li>
 <li class="menu"><a class="menu" href="publications.html">Publications</a></li>
 </ul>
 </div>
