--- a/publications.html
+++ b/publications.html
@@ -91,8 +91,18 @@
   <li><a href="https://ui.adsabs.harvard.edu/abs/2021ApJS..256...42H/abstract">A Coscaling Grid for Athena++</a>, Habegger, R. and Heitsch, F. 2021, The Astrophysical Journal Supplement Series, 256(2), p.42.    
   </li>
 
+  <li><a href="https://ui.adsabs.harvard.edu/abs/2019ApJS..241...24M/abstract">The Athena++ Adaptive Mesh Refinement Framework: Design and Magnetohydrodynamic Solvers</a>, Moon, S., Kim, W.T., Ostriker, E. 2019, The Astrophysical Journal Supplement Series, 241(2), p.24.
+  </li>
+  
   <li><a href="https://ui.adsabs.harvard.edu/abs/2018ApJ...854....5J/abstract">A New Numerical Scheme for Cosmic-Ray Transport</a>, Jiang, Y.F. and Oh, S.P. 2018, The Astrophysical Journal, 854(1), p.5.
   </li>
+
+    <li><a href="https://ui.adsabs.harvard.edu/abs/2021ITPDS..32...85G/abstract">K-Athena: a performance portable structured grid finite volume magnetohydrodynamics code</a>, Grete, P. and Glines, F. W. and O'Shea, B. W. 2021, IEEE Transactions on Parallel and Distributed Systems, 32(1), pp.85-907.
+  </li>
+
+  <li><a href="https://ui.adsabs.harvard.edu/abs/2022arXiv220212309G/abstract">Parthenon-- a performance portable block-structured adaptive mesh refinement framework </a>,  Grete, P. et al 2022, The International Journal of High Performance Computing Applications, 0(0), p.22.
+  </li>
+  <!-- https://journals.sagepub.com/doi/full/10.1177/10943420221143775 -->
 
 </ol>
 <!-- <h2>Unpublished, preprints, technical reports</h2> -->
