--- a/publications.html
+++ b/publications.html
@@ -91,7 +91,8 @@
   <li><a href="https://ui.adsabs.harvard.edu/abs/2021ApJS..256...42H/abstract">A Coscaling Grid for Athena++</a>, Habegger, R. and Heitsch, F. 2021, The Astrophysical Journal Supplement Series, 256(2), p.42.    
   </li>
 
-  <li><a href="https://ui.adsabs.harvard.edu/abs/2019ApJS..241...24M/abstract">The Athena++ Adaptive Mesh Refinement Framework: Design and Magnetohydrodynamic Solvers</a>, Moon, S., Kim, W.T., Ostriker, E. 2019, The Astrophysical Journal Supplement Series, 241(2), p.24.
+  <li><a href="https://ui.adsabs.harvard.edu/abs/2019ApJS..241...24M/abstract">A Fast Poisson Solver of Second-order Accuracy for Isolated Systems in Three-dimensional Cartesian and Cylindrical Coordinates
+</a>, Moon, S., Kim, W.T., Ostriker, E. 2019, The Astrophysical Journal Supplement Series, 241(2), p.24.
   </li>
   
   <li><a href="https://ui.adsabs.harvard.edu/abs/2018ApJ...854....5J/abstract">A New Numerical Scheme for Cosmic-Ray Transport</a>, Jiang, Y.F. and Oh, S.P. 2018, The Astrophysical Journal, 854(1), p.5.
