--- a/download.html
+++ b/download.html
@@ -45,12 +45,16 @@
 <p>This program is free software; you can redistribute it and/or modify it under the terms of The BSD 3-Clause License.
 </p>
 <p>
-<strong>UPDATE</strong> (2021-05-10): The development repo is now public!  The latest release Version 21.0 is available directly from the <a href="https://github.com/PrincetonUniversity/athena">the GitHub repository</a>.
+<strong>UPDATE</strong> (2024-06-14): Version 24.0 has been released, and it contains several exciting new features, including: Multigrid solvers (self-gravity and cosmic ray diffusion), chemistry, non-relativistic radiation and cosmic ray transport (explicit and implicit), low-dissipation Riemann solvers, etc.
+</p>
+
+<p>
+<strong>UPDATE</strong> (2021-05-10): The development repo is now public!
 </p>
 
 <h2>GitHub Repository</h2>
 <p>
-The latest release is <strong>21.0</strong> and is distribuited on <a href="https://github.com/PrincetonUniversity/athena">the GitHub repository</a>. You can download the code from the repository using any Git client.
+The latest release is <strong>24.0</strong> and is distribuited on <a href="https://github.com/PrincetonUniversity/athena">the GitHub repository</a>. You can download the code from the repository using any Git client.
   See the <a href="https://github.com/PrincetonUniversity/athena/releases">GitHub Release Notes</a> for more details on what has changed. 
 </p>
 </p>
