--- a/publications.html
+++ b/publications.html
@@ -45,63 +45,59 @@
 <!-- <h2>Refereed code and method papers</h2> -->
 <h2>Code and method papers</h2>
 <ol>
-  <li><a href="https://ui.adsabs.harvard.edu/abs/2020ApJS..249....4S"> The Athena++ adaptive mesh refinement framework: design and magnetohydrodynamic solvers</a>, Stone, J. M., Tomida, K., White, C. J., &amp; Felker, K. G. 2020, The Astrophysical Journal Supplement, 249(1), 40 pages </li>
+  <li><a href="https://ui.adsabs.harvard.edu/abs/2020ApJS..249....4S"> The Athena++ adaptive mesh refinement framework: design and magnetohydrodynamic solvers</a>, Stone, J. M., Tomida, K., White, C. J., &amp; Felker, K. G. 2020, The Astrophysical Journal Supplement, 249(1), id.4, 40 pages </li>
   <!-- https://iopscience.iop.org/article/10.3847/1538-4365/ab929b   -->
   <li><a href="https://ui.adsabs.harvard.edu/abs/2018JCoPh.375.1365F">A fourth-order accurate finite volume method for ideal MHD via upwind constrained transport</a>, Felker, K. G., &amp; Stone, J. M. 2018, Journal of Computational Physics, 375, 1365-1400</li>
   <!-- https://www.sciencedirect.com/science/article/pii/S0021999118305485 -->
-  <li><a href="https://adsabs.harvard.edu/abs/2016ApJS..225...22W">An Extension of the Athena++ Code Framework for GRMHD Based on Advanced Riemann Solvers and Staggered-mesh Constrained Transport</a>, White, C. J., Stone, J. M., &amp; Gammie, C. F. 2016, The Astrophysical Journal Supplement, 225(2), 22 pages</li>
+  <li><a href="https://adsabs.harvard.edu/abs/2016ApJS..225...22W">An Extension of the Athena++ Code Framework for GRMHD Based on Advanced Riemann Solvers and Staggered-mesh Constrained Transport</a>, White, C. J., Stone, J. M., &amp; Gammie, C. F. 2016, The Astrophysical Journal Supplement, 225(2), id.22, 22 pages</li>
   <!-- https://iopscience.iop.org/article/10.3847/0067-0049/225/2/22 -->
 
-  <li><a href="https://ui.adsabs.harvard.edu/abs/2023ApJS..266....7T/abstract">The Athena++ Adaptive Mesh Refinement Framework: Multigrid Solvers for Self-gravity</a>, Tomida, K. and Stone, J.M. 2023, The Astrophysical Journal Supplement Series, 266(1), p.7.</li>
+  <li><a href="https://ui.adsabs.harvard.edu/abs/2023ApJS..266....7T/abstract">The Athena++ Adaptive Mesh Refinement Framework: Multigrid Solvers for Self-gravity</a>, Tomida, K. and Stone, J.M. 2023, The Astrophysical Journal Supplement Series, 266(1), id.7, 22 pages</li>
   <!-- https://iopscience.iop.org/article/10.3847/1538-4365/acc2c0 -->
 
-  <li><a href="https://ui.adsabs.harvard.edu/abs/2020ApJS..248....7C/abstract">An Extension of the Athena++ Framework for General Equations of State</a>, Coleman, M.S. 2020,  The Astrophysical Journal Supplement Series, 248(1), p.7. </li>
+  <li><a href="https://ui.adsabs.harvard.edu/abs/2020ApJS..248....7C/abstract">An Extension of the Athena++ Framework for General Equations of State</a>, Coleman, M.S.B. 2020,  The Astrophysical Journal Supplement Series, 248(1), id.7, 24 pages</li>
 
-  <li><a href="https://ui.adsabs.harvard.edu/abs/2021ApJS..252...30M/abstract">An Extension of the Athena++ Framework for Fully Conservative Self-gravitating Hydrodynamics</a>, Mullen, P.D., Hanawa, T. and Gammie, C.F. 2021, The Astrophysical Journal Supplement Series, 252(2), p.30. </li>
+  <li><a href="https://ui.adsabs.harvard.edu/abs/2021ApJS..252...30M/abstract">An Extension of the Athena++ Framework for Fully Conservative Self-gravitating Hydrodynamics</a>, Mullen, P.D., Hanawa, T. and Gammie, C.F. 2021, The Astrophysical Journal Supplement Series, 252(2), id.30, 19 pages</li>
 
-  <li><a href="https://ui.adsabs.harvard.edu/abs/2023arXiv230504965G/abstract">Implementation of chemistry in the Athena++ code</a>, Gong, M., Ho, K.W., Stone, J.M., Ostriker, E.C., Caselli, P., Grassi, T., Kim, C.G., Kim, J.G. and Halevi, G. 2023, arXiv preprint arXiv:2305.04965.
+  <li><a href="https://ui.adsabs.harvard.edu/abs/2023ApJS..268...42G/abstract">Implementation of chemistry in the Athena++ code</a>, Gong, M., Ho, K.W., Stone, J.M., Ostriker, E.C., Caselli, P., Grassi, T., Kim, C.G., Kim, J.G. and Halevi, G. 2023, The Astrophysical Journal Supplement Series, 268(2), id.42, 12 pages
   </li>
   
-  <li><a href="https://ui.adsabs.harvard.edu/abs/2023arXiv230204283W/abstract">An Extension of the Athena++ Code Framework for Radiation-Magnetohydrodynamics in General Relativity Using a Finite-Solid-Angle Discretization
-</a>, White, C.J., Mullen, P.D., Jiang, Y.F., Davis, S.W., Stone, J.M., Morozova, V. and Zhang, L. 2023, arXiv preprint arXiv:2302.04283.
-  </li>
+  <li><a href="https://ui.adsabs.harvard.edu/abs/2023ApJ...949..103W/abstract">An Extension of the Athena++ Code Framework for Radiation-Magnetohydrodynamics in General Relativity Using a Finite-Solid-Angle Discretization
+</a>, White, C.J., Mullen, P.D., Jiang, Y.F., Davis, S.W., Stone, J.M., Morozova, V. and Zhang, L. 2023, The Astrophysical Journal, 949(2), id.103, 20 pages</li>
 
-  <li><a href="https://ui.adsabs.harvard.edu/abs/2022ApJS..263....4J/abstract">Multigroup Radiation Magnetohydrodynamics Based on Discrete Ordinates including Compton Scattering</a>, Jiang, Y.F. 2022, The Astrophysical Journal Supplement Series, 263(1), p.4.
-  </li>
+  <li><a href="https://ui.adsabs.harvard.edu/abs/2022ApJS..263....4J/abstract">Multigroup Radiation Magnetohydrodynamics Based on Discrete Ordinates including Compton Scattering</a>, Jiang, Y.F. 2022, The Astrophysical Journal Supplement Series, 263(1), id.4, 19 pages</li>
 
-  <li><a href="https://ui.adsabs.harvard.edu/abs/2021ApJS..253...49J/abstract">An Implicit Finite Volume Scheme to Solve the Time-dependent Radiation Transport Equation Based on Discrete Ordinates</a>, Jiang, Y.F. 2021, The Astrophysical Journal Supplement Series, 253(2), p.49.
-  </li>
+  <li><a href="https://ui.adsabs.harvard.edu/abs/2021ApJS..253...49J/abstract">An Implicit Finite Volume Scheme to Solve the Time-dependent Radiation Transport Equation Based on Discrete Ordinates</a>, Jiang, Y.F. 2021, The Astrophysical Journal Supplement Series, 253(2), id.49, 19 pages</li>
 
-  <li><a href="https://ui.adsabs.harvard.edu/abs/2014ApJS..213....7J/abstract">An Algorithm for Radiation Magnetohydrodynamics Based on Solving the Time-dependent Transfer Equation</a>, Jiang, Y.F., Stone, J.M. and Davis, S.W. 2014, The Astrophysical Journal Supplement Series, 213(1), p.7.
+  <li><a href="https://ui.adsabs.harvard.edu/abs/2014ApJS..213....7J/abstract">An Algorithm for Radiation Magnetohydrodynamics Based on Solving the Time-dependent Transfer Equation</a>, Jiang, Y.F., Stone, J.M. and Davis, S.W. 2014, The Astrophysical Journal Supplement Series, 213(1), id.7, 15 pages</li>
+
+  <li><a href="https://ui.adsabs.harvard.edu/abs/2018ApJ...854....5J/abstract">A New Numerical Scheme for Cosmic-Ray Transport</a>, Jiang, Y.F. and Oh, S.P. 2018, The Astrophysical Journal, 854(1), id.5, 23 pages
   </li>
 
 </ol>
 
 <h2>Unmerged features, forked codes, etc.</h2>
 <ol>
-  <li><a href="https://ui.adsabs.harvard.edu/abs/2023arXiv230410568S/abstract">The Magnetohydrodynamic-Particle-In-Cell Module in Athena++: Implementation and Code Tests</a>, Sun, X. and Bai, X.N. 2023, arXiv preprint arXiv:2304.10568.
+  <li><a href="https://ui.adsabs.harvard.edu/abs/2023MNRAS.523.3328S/abstract">The Magnetohydrodynamic-Particle-In-Cell Module in Athena++: Implementation and Code Tests</a>, Sun, X. and Bai, X.N. 2023, Monthly Notices of the Royal Astronomical Society, 523(3), 3328-3347
   </li>
 
-  <li><a href="https://ui.adsabs.harvard.edu/abs/2022ApJS..262...11H/abstract">A Multifluid Dust Module in Athena++: Algorithms and Numerical Tests</a>, Huang, P. and Bai, X.N. 2022,  The Astrophysical Journal Supplement Series, 262(1), p.11.
+  <li><a href="https://ui.adsabs.harvard.edu/abs/2022ApJS..262...11H/abstract">A Multifluid Dust Module in Athena++: Algorithms and Numerical Tests</a>, Huang, P. and Bai, X.N. 2022,  The Astrophysical Journal Supplement Series, 262(1), id.11, 25 pages
   </li>
 
-  <li><a href="https://ui.adsabs.harvard.edu/abs/2021ApJS..257...25D/abstract">GR-Athena++: Puncture Evolutions on Vertex-centered Oct-tree Adaptive Mesh Refinement</a>, Daszuta, B., Zappa, F., Cook, W., Radice, D., Bernuzzi, S. and Morozova, V. 2021, The Astrophysical Journal Supplement Series, 257(2), p.25.
+  <li><a href="https://ui.adsabs.harvard.edu/abs/2021ApJS..257...25D/abstract">GR-Athena++: Puncture Evolutions on Vertex-centered Oct-tree Adaptive Mesh Refinement</a>, Daszuta, B., Zappa, F., Cook, W., Radice, D., Bernuzzi, S. and Morozova, V. 2021, The Astrophysical Journal Supplement Series, 257(2), id.25, 26 pages
   </li>
 
-  <li><a href="https://ui.adsabs.harvard.edu/abs/2021ApJS..256...42H/abstract">A Coscaling Grid for Athena++</a>, Habegger, R. and Heitsch, F. 2021, The Astrophysical Journal Supplement Series, 256(2), p.42.    
+  <li><a href="https://ui.adsabs.harvard.edu/abs/2021ApJS..256...42H/abstract">A Coscaling Grid for Athena++</a>, Habegger, R. and Heitsch, F. 2021, The Astrophysical Journal Supplement Series, 256(2), id.42, 8 pages
   </li>
 
   <li><a href="https://ui.adsabs.harvard.edu/abs/2019ApJS..241...24M/abstract">A Fast Poisson Solver of Second-order Accuracy for Isolated Systems in Three-dimensional Cartesian and Cylindrical Coordinates
-</a>, Moon, S., Kim, W.T., Ostriker, E. 2019, The Astrophysical Journal Supplement Series, 241(2), p.24.
+</a>, Moon, S., Kim, W.T., Ostriker, E. 2019, The Astrophysical Journal Supplement Series, 241(2), id.24, 20 pages
   </li>
   
-  <li><a href="https://ui.adsabs.harvard.edu/abs/2018ApJ...854....5J/abstract">A New Numerical Scheme for Cosmic-Ray Transport</a>, Jiang, Y.F. and Oh, S.P. 2018, The Astrophysical Journal, 854(1), p.5.
-  </li>
-
     <li><a href="https://ui.adsabs.harvard.edu/abs/2021ITPDS..32...85G/abstract">K-Athena: a performance portable structured grid finite volume magnetohydrodynamics code</a>, Grete, P. and Glines, F. W. and O'Shea, B. W. 2021, IEEE Transactions on Parallel and Distributed Systems, 32(1), pp.85-907.
   </li>
 
-  <li><a href="https://ui.adsabs.harvard.edu/abs/2022arXiv220212309G/abstract">Parthenon-- a performance portable block-structured adaptive mesh refinement framework </a>,  Grete, P. et al 2022, The International Journal of High Performance Computing Applications, 0(0), p.22.
+  <li><a href="https://ui.adsabs.harvard.edu/abs/2022arXiv220212309G/abstract">Parthenon-- a performance portable block-structured adaptive mesh refinement framework </a>,  Grete, P. et al 2022, The International Journal of High Performance Computing Applications, 2022, 37(5), 465-486
   </li>
   <!-- https://journals.sagepub.com/doi/full/10.1177/10943420221143775 -->
 
