Added CR diffusion reference

--- a/publications.html
+++ b/publications.html
@@ -73,6 +73,8 @@
 
   <li><a href="https://ui.adsabs.harvard.edu/abs/2018ApJ...854....5J/abstract">A New Numerical Scheme for Cosmic-Ray Transport</a>, Jiang, Y.F. and Oh, S.P. 2018, The Astrophysical Journal, 854(1), id.5, 23 pages
   </li>
+  
+  <li><a href="https://ui.adsabs.harvard.edu/abs/2025arXiv250509231N/abstract">Formation and Early Evolution of Protoplanetary Disks under Nonuniform Cosmic-Ray Ionization</a> (Implementation of the Multigrid CR diffusion solver, see Appendix),  Nishio, E., Tomida, K., Kudoh, Y., Kimura, S. S., 2025, The Astrophysical Journal, 988(1), id.56, 19 pages</li>
 
 </ol>
 
